globus-net-manager (0.17-1+gt6.@distro@) @distro@; urgency=low

  * Fix .pc typo

 -- Globus Toolkit <support@globus.org>  Tue, 04 Apr 2017 12:22:23 -0400

globus-net-manager (0.16-1+gt6.@distro@) @distro@; urgency=low

  * exclude tests from doc

 -- Globus Toolkit <support@globus.org>  Thu, 08 Sep 2016 15:44:14 -0400

globus-net-manager (0.15-1+gt6.@distro@) @distro@; urgency=low

  * Use prelinks for tests so that they run on El Capitan

 -- Globus Toolkit <support@globus.org>  Mon, 18 Apr 2016 15:03:47 -0400

globus-net-manager (0.14-1+gt6.@distro@) @distro@; urgency=low

  * pre_connect return attrs get set on attr, not handle

 -- Globus Toolkit <support@globus.org>  Fri, 18 Dec 2015 09:52:07 -0600

globus-net-manager (0.13-1+gt6.@distro@) @distro@; urgency=low

  * Remove unused code

 -- Globus Toolkit <support@globus.org>  Thu, 29 Oct 2015 16:28:52 -0400

globus-net-manager (0.12-1+gt6.@distro@) @distro@; urgency=low

  * Fix linkage on Mac with libtool 2.4.6

 -- Globus Toolkit <support@globus.org>  Tue, 14 Jul 2015 20:02:19 -0400

globus-net-manager (0.11-1+gt6.@distro@) @distro@; urgency=low

  * Fix memory leaks, NULL pointer derefs, and dead assignments

 -- Globus Toolkit <support@globus.org>  Tue, 14 Jul 2015 12:01:35 -0400

globus-net-manager (0.10-1+gt6.@distro@) @distro@; urgency=low

  * Fix uninitialized value
  * Remove unused variables

 -- Globus Toolkit <support@globus.org>  Wed, 01 Jul 2015 16:06:21 -0400

globus-net-manager (0.9-1+gt6.@distro@) @distro@; urgency=low

  * Fix missing documentation
  * Clarify python invocation
  * Fix error handling
  * Add test for end_listen in python
  * Allow running tests with valgrind

 -- Globus Toolkit <support@globus.org>  Wed, 17 Jun 2015 13:50:43 -0400

globus-net-manager (0.8-2+gt6.@distro@) @distro@; urgency=low

  * Fix tests on jessie pbuilder

 -- Globus Toolkit <support@globus.org>  Thu, 16 Apr 2015 14:00:39 -0400

globus-net-manager (0.8-1+gt6.@distro@) @distro@; urgency=low
