@@ -1,3 +1,9 @@
+globus-net-manager (0.18-1+gt6.@distro@) @distro@; urgency=low
+
+  * fix pre-connect not using changed remote contact
+
+ -- Globus Toolkit <support@globus.org>  Tue, 01 May 2018 11:08:20 -0500
+
 globus-net-manager (0.17-1+gt6.@distro@) @distro@; urgency=low
 
   * Fix .pc typo
